Fix lightbox image clipping beyond viewable area on wide screens

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -185,6 +185,7 @@ section {
 
 #lightbox-img {
   max-width: 95vw;
+  max-height: 95vh;
 }
 
 @media (min-width: 576px) {
